# rtt_corba_remote

./: CMakeLists.txt  manifest.xml
src/: CMakeLists.txt  CorbaNameService.cpp  CorbaNameService.hpp  CorbaTaskContextServer.cpp  CorbaTaskContextServer.hpp  Main.cpp
test/: CMakeLists.txt  test_Dummy.cpp
